kubernetes/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ui
  labels:
    app: search-engine
    component: ui
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: search-engine
      component: ui
  template: 
    metadata:
      name: ui-pod
      labels:
        app: search-engine
        component: ui
    spec:
      containers:
      - image: motek/ui 
        name: ui
