kubernetes/ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: search-engine
    component: ui
spec:
  type: NodePort
  ports:  
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: search-engine
    component: ui
